--- a/html/ui.html
+++ b/html/ui.html
@@ -1,56 +1,81 @@
 <html>
-  <head>
-    <link rel="stylesheet" href="main.css" />
-    <script
-      src="https://kit.fontawesome.com/a412d17519.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
-      rel="stylesheet"
-    />
-    <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-  </head>
-  <body>
-    <div id="StatusHud">
-      <div id="playerid" class="statback">
-        <i
-          class="fas fa-user"
-          style="color: rgb(230, 230, 230); font-size: 0.7rem"
-        ></i>
-        <div id="playeridlevel" class="textstat">N/A</div>
-      </div>
-      <div id="healt" class="statback">
-        <i class="fas fa-heart-broken" style="color: red"></i>
-        <div id="healtlevel" class="textstat">100</div>
-      </div>
-      <div id="shield" class="statback">
-        <i class="fas fa-shield-alt" style="color: royalblue"></i>
-        <div id="shieldval" class="textstat">100</div>
-      </div>
-      <div id="hunger" class="statback">
-        <i class="fas fa-hamburger" style="color: orange"></i>
-        <div id="hungerlevel" class="textstat">100</div>
-      </div>
-      <div id="water" class="statback">
-        <i class="fas fa-glass-whiskey" style="color: rgb(72, 72, 216)"></i>
-        <div id="waterlevel" class="textstat" style="margin-top: -0.1vh">9</div>
-      </div>
-      <div id="stress" class="statback">
-        <i
-          class="fas fa-brain"
-          style="color: rgb(162, 53, 224); font-size: 0.7rem"
-        ></i>
-        <div id="stresslevel" class="textstat">100</div>
-      </div>
-      <div id="fuel" class="statback">
-        <i
-          class="fas fa-gas-pump"
-          style="color: rgb(53, 224, 53); font-size: 0.7rem"
-        ></i>
-        <div id="fuellevel" class="textstat">FUEL</div>
-      </div>
-    </div>
-  </body>
-  <script type="text/javascript" src="script.js"></script>
+    <head>
+        <link rel="stylesheet" href="main.css" />
+        <script
+            src="https://kit.fontawesome.com/a412d17519.js"
+            crossorigin="anonymous"
+        ></script>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+            rel="stylesheet"
+        />
+        <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    </head>
+    <body>
+        <div id="StatusHud">
+            <div id="playerid" class="statback">
+                <i class="fas fa-user" style="color: rgb(230, 230, 230)"></i>
+                <div id="playeridlevel" class="textstat">N/A</div>
+            </div>
+            <div id="healt" class="statback">
+                <i class="fas fa-heart-broken" style="color: red"></i>
+                <div id="healtlevel" class="textstat">100</div>
+            </div>
+            <div id="shield" class="statback">
+                <i class="fas fa-shield-alt" style="color: royalblue"></i>
+                <div id="shieldval" class="textstat">100</div>
+            </div>
+            <div id="hunger" class="statback">
+                <i class="fas fa-hamburger" style="color: orange"></i>
+                <div id="hungerlevel" class="textstat">100</div>
+            </div>
+            <div id="water" class="statback">
+                <i
+                    class="fas fa-glass-whiskey"
+                    style="color: rgb(72, 72, 216)"
+                ></i>
+                <div
+                    id="waterlevel"
+                    class="textstat"
+                    style="margin-top: -0.1vh"
+                >
+                    9
+                </div>
+            </div>
+            <div id="stress" class="statback">
+                <i class="fas fa-brain" style="color: rgb(162, 53, 224)"></i>
+                <div id="stresslevel" class="textstat">100</div>
+            </div>
+            <div id="volume" class="statback">
+                <i class="fas fa-music" style="color: rgb(162, 53, 224)"></i>
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="auto"
+                    height="2.5vh"
+                    viewBox="0 0 10 20"
+                    class="iconstat"
+                >
+                    <path
+                        d="
+M17 19h-3a.75.75 0 010-1.5h3a.75.75 0 010 1.5z
+M11 19h-3a.75.75 0 010-1.5h3a.75.75 0 010 1.5z
+M5 19h-3a.75.75 0 01-.75-.75v-4.5a.75.75 0 01.75-.75h3a.75.75 0 01.75.75v4.5a.75.75 0 01-.75.75z"
+                        data-original="#000000"
+                        xmlns="http://www.w3.org/2000/svg"
+                    />
+                </svg>
+                <!--<i class="fas fa-signal iconstat" style=""></i>  -->
+                <!--                <div id="stresslevel" class="textstat">100</div>-->
+            </div>
+            <div id="fuel" class="statback">
+                <i
+                    class="fas fa-gas-pump"
+                    style="color: rgb(53, 224, 53); font-size: 0.7rem"
+                ></i>
+                <div id="fuellevel" class="textstat">FUEL</div>
+            </div>
+        </div>
+    </body>
+    <script type="text/javascript" src="script.js"></script>
 </html>
