Change file position, add comment

--- a/html/ui.html
+++ b/html/ui.html
@@ -49,6 +49,7 @@
             </div>
             <div id="volume" class="statback">
                 <i class="fas fa-music" style="color: rgb(162, 53, 224)"></i>
+                <!--This is where the volume Svg is-->
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="auto"
@@ -57,16 +58,11 @@
                     class="iconstat"
                 >
                     <path
-                        d="
-M17 19h-3a.75.75 0 010-1.5h3a.75.75 0 010 1.5z
-M11 19h-3a.75.75 0 010-1.5h3a.75.75 0 010 1.5z
-M5 19h-3a.75.75 0 01-.75-.75v-4.5a.75.75 0 01.75-.75h3a.75.75 0 01.75.75v4.5a.75.75 0 01-.75.75z"
+                        d="M17 19h-3a.75.75 0 010-1.5h3a.75.75 0 010 1.5zM11 19h-3a.75.75 0 01-.75-.75v-8.25a.75.75 0 01.75-.75h3a.75.75 0 01.75.75v8.25a.75.75 0 01-.75.75zM5 19h-3a.75.75 0 01-.75-.75v-4.5a.75.75 0 01.75-.75h3a.75.75 0 01.75.75v4.5a.75.75 0 01-.75.75z"
                         data-original="#000000"
                         xmlns="http://www.w3.org/2000/svg"
                     />
                 </svg>
-                <!--<i class="fas fa-signal iconstat" style=""></i>  -->
-                <!--                <div id="stresslevel" class="textstat">100</div>-->
             </div>
             <div id="fuel" class="statback">
                 <i
